# DiffAlign

./: .gitignore  README.md  VERIFICATION.md  claude.md  deleted_sections.html  env.yaml  index.html  logo.pptx  notes.md  original_to_raw.py  packages.txt  pyproject.toml  req.txt  setup.py  social_media_draft.md  subprocess_log.txt  video.py
api/: __init__.py  predict.py  syntheseus_model.py
configs/: config.yaml  dataset.yaml  default.yaml
diffalign/: __init__.py  benchmark_sampling_speed.py  constants.py  diffusion_utils.py  estimate_mrr.ipynb  eval_from_wandb_utils.py  eval_from_wandb_wrapper.py  eval_from_wandb_wrapper_single_epoch.py  evaluate.py  evaluate_array_job.py  evaluate_full_dataset.py  evaluate_single_process.py  evaluate_wandblog.py  find_atommapped_reaction_in_dataset.py  find_dup_rxn.py  get_run_config.py  gpus.py  graph_data_structure.py  graph_transformer.py  graph_transformer_old.py  helpers.py  inference.py  inpaint_other_molecule.py  interactive_inpainting.py  model.py  move_old_run_models.py  output_graph_parsed_dataset.py  plot_figures.py  plot_mol.py  plot_rxn_interactive.ipynb  reeval_with_log.py  rerank_old.py  reupload_artifacts.py  sample.py  sample_array_job.py  sample_conditional_on_given_product.py  sample_conditional_on_given_product_outside_git_2.py  sample_figures.py  sample_full_dataset.py  sample_old_runs.py  (+16 more)
diffalign_new/: sinusoidal_positional_embedding.py
diffalign_old/: atom_types_superset.py  benchmark_sampling_speed.py  draft.py  eval_from_wandb_utils.py  eval_from_wandb_wrapper.py  evaluate.py  evaluate_array_job.py  (+40 more)
(+376 files in other folders)
